tests/snapshots/cli_no_configuration__environment_variable_output_in_github_context.snap
---
source: tests/cli_no_configuration.rs
expression: github_output
---
GitVersion_AssemblySemFileVer=0.1.0.55001
assemblySemFileVer=0.1.0.55001
GitVersion_AssemblySemVer=0.1.0.0
assemblySemVer=0.1.0.0
GitVersion_BranchName=trunk
branchName=trunk
GitVersion_BuildMetadata=
buildMetadata=
GitVersion_CommitDate=####-##-##
commitDate=####-##-##
GitVersion_CommitsSinceVersionSource=0
commitsSinceVersionSource=0
GitVersion_EscapedBranchName=trunk
escapedBranchName=trunk
GitVersion_FullBuildMetaData=
fullBuildMetaData=
GitVersion_FullSemVer=0.1.0-pre.1
fullSemVer=0.1.0-pre.1
GitVersion_InformationalVersion=0.1.0-pre.1
informationalVersion=0.1.0-pre.1
GitVersion_Major=0
major=0
GitVersion_MajorMinorPatch=0.1.0
majorMinorPatch=0.1.0
GitVersion_Minor=1
minor=1
GitVersion_Patch=0
patch=0
GitVersion_PreReleaseLabel=pre
preReleaseLabel=pre
GitVersion_PreReleaseLabelWithDash=-pre
preReleaseLabelWithDash=-pre
GitVersion_PreReleaseNumber=1
preReleaseNumber=1
GitVersion_PreReleaseTag=pre.1
preReleaseTag=pre.1
GitVersion_PreReleaseTagWithDash=-pre.1
preReleaseTagWithDash=-pre.1
GitVersion_SemVer=0.1.0-pre.1
semVer=0.1.0-pre.1
GitVersion_Sha=########################################
sha=########################################
GitVersion_ShortSha=#######
shortSha=#######
GitVersion_UncommittedChanges=0
uncommittedChanges=0
GitVersion_VersionSourceSha=
versionSourceSha=
GitVersion_WeightedPreReleaseNumber=55001
weightedPreReleaseNumber=55001
