tests/snapshots/cli_no_configuration__help_text.snap
---
source: tests/cli_no_configuration.rs
info:
  program: git-versioner
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Usage: git-versioner [OPTIONS]

Options:
  -p, --path <PATH>                        
      --main-branch <MAIN_BRANCH>          
      --release-branch <RELEASE_BRANCH>    
      --feature-branch <FEATURE_BRANCH>    
      --version-pattern <VERSION_PATTERN>  
      --tag-prefix <TAG_PREFIX>            
      --pre-release-tag <PRE_RELEASE_TAG>  
      --show-config                        Outputs effective git-versioner config in toml format
  -v, --verbose                            
  -c, --config <CONFIG_FILE>               Path to a configuration file (TOML or YAML)
  -h, --help                               Print help
  -V, --version                            Print version

----- stderr -----
