tests/snapshots/cli_no_configuration__option_custom_repository_path.snap
---
source: tests/cli_no_configuration.rs
description: "* ##SHA## (HEAD -> trunk) 0.1.0-pre.1\n"
info:
  program: git-versioner
  args:
    - "--path"
    - /var/folders/h6/6c04dcj9667bcpbvgl_79p7w0000gn/T/.tmpgU7X65
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "PreReleaseTag": "pre.1",
  "PreReleaseTagWithDash": "-pre.1",
  "PreReleaseLabel": "pre",
  "PreReleaseLabelWithDash": "-pre",
  "PreReleaseNumber": 1,
  "WeightedPreReleaseNumber": 60001,
  "BuildMetadata": "",
  "FullBuildMetaData": "",
  "MajorMinorPatch": "0.1.0",
  "SemVer": "0.1.0-pre.1",
  "AssemblySemVer": "0.1.0",
  "AssemblySemFileVer": "",
  "InformationalVersion": "0.1.0-pre.1",
  "FullSemVer": "0.1.0-pre.1",
  "BranchName": "trunk",
  "EscapedBranchName": "trunk",
  "Sha": "",
  "ShortSha": "",
  "VersionSourceSha": "",
  "CommitsSinceVersionSource": 0,
  "CommitDate": "",
  "UncommittedChanges": 0
}

----- stderr -----
