tests/snapshots/cli_no_configuration__output_from_feature_branch.snap
---
source: tests/cli_no_configuration.rs
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "PreReleaseTag": "my-feature.0",
  "PreReleaseTagWithDash": "-my-feature.0",
  "PreReleaseLabel": "my-feature",
  "PreReleaseLabelWithDash": "-my-feature",
  "PreReleaseNumber": 0,
  "WeightedPreReleaseNumber": 30000,
  "BuildMetadata": "",
  "FullBuildMetaData": "",
  "MajorMinorPatch": "0.1.0",
  "SemVer": "0.1.0-my-feature.0",
  "AssemblySemVer": "0.1.0.0",
  "AssemblySemFileVer": "0.1.0.30000",
  "InformationalVersion": "0.1.0-my-feature.0",
  "FullSemVer": "0.1.0-my-feature.0",
  "BranchName": "feature/my-feature",
  "EscapedBranchName": "feature-my-feature",
  "Sha": "########################################",
  "ShortSha": "#######",
  "VersionSourceSha": "",
  "CommitsSinceVersionSource": 0,
  "CommitDate": "####-##-##",
  "UncommittedChanges": 0
}

----- stderr -----
