tests/snapshots/cli_no_configuration__output_from_release_branch.snap
---
source: tests/cli_no_configuration.rs
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "PreReleaseTag": "pre.2",
  "PreReleaseTagWithDash": "-pre.2",
  "PreReleaseLabel": "pre",
  "PreReleaseLabelWithDash": "-pre",
  "PreReleaseNumber": 2,
  "WeightedPreReleaseNumber": 55002,
  "BuildMetadata": "",
  "FullBuildMetaData": "",
  "MajorMinorPatch": "0.1.0",
  "SemVer": "0.1.0-pre.2",
  "AssemblySemVer": "0.1.0.0",
  "AssemblySemFileVer": "0.1.0.55002",
  "InformationalVersion": "0.1.0-pre.2",
  "FullSemVer": "0.1.0-pre.2",
  "BranchName": "release/0.1.0",
  "EscapedBranchName": "release-0-1-0",
  "Sha": "########################################",
  "ShortSha": "#######",
  "VersionSourceSha": "",
  "CommitsSinceVersionSource": 0,
  "CommitDate": "####-##-##",
  "UncommittedChanges": 0
}

----- stderr -----
